@@ -3,6 +3,7 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19
 
+	- Fixed a polygon drawing bug in the HP-GL/2 filter.
 	- Added a robots.txt file to the standard install to
 	  prevent search engines from indexing the CUPS server.
 	- Added support for STATE: messages
